--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -5,22 +5,12 @@ body {
   background: #fafafa;
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
   color: #333;
+      background: url("../images/background.jpg") repeat center;
+    background-size: cover;
 }
 
-.hero-unit {
-  margin: 50px auto 0 auto;
-  width: 300px;
-  font-size: 18px;
-  font-weight: 200;
-  line-height: 30px;
-  background-color: #eee;
-  border-radius: 6px;
-  padding: 60px;
-  h1 {
-    font-size: 60px;
-    line-height: 1;
-    letter-spacing: -1px;
-  }
+.content {
+    padding: 5%;
 }
 
 .browserupgrade {
@@ -28,4 +18,54 @@ body {
   background: #ccc;
   color: #000;
   padding: 0.2em 0;
+}
+
+.mdl-card {
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    font-size: 16px;
+    font-weight: 400;
+    min-height: 200px;
+    overflow: hidden;
+    width: 100%;
+    z-index: 1;
+    position: relative;
+    background: #fff;
+    border-radius: 2px;
+    box-sizing: border-box;
+}
+.mdl-card__title {
+    color: white;
+    min-height: 300px;
+}
+.mdl-grid {
+    padding: 0px !important;
+}
+
+header {
+    margin: 5% 5% 0 5%;
+    padding: 20px;
+    background: rgba(192,192,192,.1);
+    min-height: 300px;
+    color: white;
+}
+.mdl-cell {
+    margin: 8px auto;
+}
+.mdl-card__menu{
+  color: white;
+}
+.mdl-card__actions.mdl-card--border {
+    display: inherit !important;
+}
+a.mdl-button.mdl-button--colored.mdl-js-button.mdl-js-ripple-effect {
+    border: solid thin;
+}
+.date-text {
+    padding: 10px;
+    text-transform: uppercase;
 }
